--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,8 @@ body {
   background: var(--background);
   color: var(--foreground);
  font-family: "Outfit", Arial, Helvetica, sans-serif;
+  padding-right: 0 !important; /* Prevent extra padding when menu opens */
+  overflow-y: scroll;
 }
 img, video {
   height: auto;
@@ -66,6 +68,7 @@ section, main, header, footer, nav, div {
     text-align: left;
    
   }
+  
 }
 @keyframes mymove {
   0%   {top: 0px;}
