--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -52,6 +52,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 1rem;
+    position: fixed;
   }
   .nav-links {
     gap: 1rem;
@@ -69,6 +70,7 @@
     flex-direction: column;
     align-items: stretch;
     padding: 0.5rem;
+    position: fixed;
   }
   .logo img {
     height: 32px;
@@ -91,3 +93,13 @@
   }
 }
 
+@media (max-width: 768px) {
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;   /* use viewport width */
+    max-width: 100vw;
+  }
+}
