--- a/src/app/erpnext/erpnext.module.css
+++ b/src/app/erpnext/erpnext.module.css
@@ -85,7 +85,7 @@
   color: #1f2937;
 }
 .sectionDesc {
-  color: #374151;
+  color: #494b4e;
   text-align: left;
   margin-bottom: 1.5rem;
   line-height: 1.7;
